--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -33,8 +33,8 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/image_prompt"
                 android:adjustViewBounds="true"
-                android:maxWidth="380dp"
-                android:maxHeight="380dp"
+                android:maxWidth="300dp"
+                android:maxHeight="300dp"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
@@ -191,7 +191,8 @@
                 <org.apmem.tools.layouts.FlowLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
 
                     <TextView
                         android:id="@+id/item_tag1_field"
