--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -9,18 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_margin">
-
-        <!-- Contains item image -->
-        <ImageView
-            android:id="@+id/edit_item_image"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
-            android:scaleType="centerCrop"
-            android:src="@drawable/image_prompt"
-            android:clickable="true"/>
+        android:orientation="vertical">
 
         <!-- Contains the text fields -->
         <android.support.v4.widget.NestedScrollView
@@ -28,165 +17,186 @@
             android:layout_height="0dp"
             android:layout_weight="0.6">
 
-            <!-- Contains all the item info -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="@dimen/activity_margin">
-
-                <!-- Overview category -->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="@dimen/activity_margin">
 
-                    <!-- Label -->
-                    <TextView
-                        style="@style/CategoryStyle"
-                        android:text="@string/category_overview" />
+                    <!-- Contains item image -->
+                    <ImageView
+                        android:id="@+id/edit_item_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.4"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/image_prompt"
+                        android:adjustViewBounds="true"
+                        android:maxWidth="300dp"
+                        android:maxHeight="300dp"
+                        android:clickable="true"/>
 
-                    <!-- Input fields -->
+                    <!-- Contains all the item info -->
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
-                        android:paddingLeft="4dp">
+                        android:padding="@dimen/activity_margin">
 
-                        <!-- Name field -->
-                        <android.support.design.widget.TextInputLayout
+                        <!-- Overview category -->
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
-                            <android.support.design.widget.TextInputEditText
-                                android:id="@+id/edit_item_name"
-                                style="@style/EditorFieldStyle"
-                                android:hint="@string/hint_item_name"
-                                android:inputType="textCapWords"/>
+                            <!-- Label -->
+                            <TextView
+                                style="@style/CategoryStyle"
+                                android:text="@string/category_overview" />
 
-                        </android.support.design.widget.TextInputLayout>
+                            <!-- Input fields -->
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"
+                                android:orientation="vertical"
+                                android:paddingLeft="4dp">
 
-                        <!-- Quantity field -->
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                                <!-- Name field -->
+                                <android.support.design.widget.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
 
-                            <android.support.design.widget.TextInputEditText
-                                android:id="@+id/edit_item_quantity"
-                                style="@style/EditorFieldStyle"
-                                android:hint="@string/hint_item_quantity"
-                                android:inputType="numberSigned"/>
+                                    <android.support.design.widget.TextInputEditText
+                                        android:id="@+id/edit_item_name"
+                                        style="@style/EditorFieldStyle"
+                                        android:hint="@string/hint_item_name"
+                                        android:inputType="textCapWords"/>
 
-                        </android.support.design.widget.TextInputLayout>
+                                </android.support.design.widget.TextInputLayout>
 
-                        <!-- Price field -->
+                                <!-- Quantity field -->
+                                <android.support.design.widget.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                    <android.support.design.widget.TextInputEditText
+                                        android:id="@+id/edit_item_quantity"
+                                        style="@style/EditorFieldStyle"
+                                        android:hint="@string/hint_item_quantity"
+                                        android:inputType="numberSigned"/>
+
+                                </android.support.design.widget.TextInputLayout>
+
+                                <!-- Price field -->
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:weightSum="10">
+
+                                    <TextView
+                                        android:layout_width="0dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="1"
+                                        android:text="@string/dollarSign" />
+
+                                    <android.support.design.widget.TextInputLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content">
+
+                                        <android.support.design.widget.TextInputEditText
+                                            android:id="@+id/edit_item_price"
+                                            style="@style/EditorFieldStyle"
+                                            android:hint="@string/hint_item_price"
+                                            android:inputType="numberDecimal"/>
+
+                                    </android.support.design.widget.TextInputLayout>
+
+
+                                </LinearLayout>
+
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- Description category -->
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:weightSum="10">
+                            android:paddingTop="32dp">
 
+                            <!-- Label -->
                             <TextView
+                                style="@style/CategoryStyle"
+                                android:text="@string/category_description" />
+
+                            <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="@string/dollarSign" />
+                                android:layout_weight="2"
+                                android:orientation="vertical"
+                                android:paddingLeft="4dp">
 
-                            <android.support.design.widget.TextInputLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <android.support.design.widget.TextInputEditText
-                                    android:id="@+id/edit_item_price"
+                                <!-- Description field -->
+                                <EditText
+                                    android:id="@+id/edit_item_description"
                                     style="@style/EditorFieldStyle"
-                                    android:hint="@string/hint_item_price"
-                                    android:inputType="numberDecimal"/>
+                                    android:hint="@string/hint_item_description"
+                                    android:inputType="textCapWords" />
 
-                            </android.support.design.widget.TextInputLayout>
-
+                            </LinearLayout>
 
                         </LinearLayout>
 
+                        <!-- Tags category -->
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:paddingTop="32dp">
+
+                            <!-- Label -->
+                            <TextView
+                                style="@style/CategoryStyle"
+                                android:text="@string/category_tag" />
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"
+                                android:orientation="vertical"
+                                android:paddingLeft="4dp">
+
+                                <!-- Tag field -->
+                                <EditText
+                                    android:id="@+id/edit_item_tag1"
+                                    style="@style/EditorFieldStyle"
+                                    android:hint="@string/hint_item_tag1"
+                                    android:inputType="textCapWords" />
+
+                                <EditText
+                                    android:id="@+id/edit_item_tag2"
+                                    style="@style/EditorFieldStyle"
+                                    android:hint="@string/hint_item_tag2"
+                                    android:inputType="textCapWords" />
+
+                                <EditText
+                                    android:id="@+id/edit_item_tag3"
+                                    style="@style/EditorFieldStyle"
+                                    android:hint="@string/hint_item_tag3"
+                                    android:inputType="textCapWords" />
+
+
+                            </LinearLayout>
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
-
-                <!-- Description category -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="32dp">
-
-                    <!-- Label -->
-                    <TextView
-                        style="@style/CategoryStyle"
-                        android:text="@string/category_description" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:orientation="vertical"
-                        android:paddingLeft="4dp">
-
-                        <!-- Description field -->
-                        <EditText
-                            android:id="@+id/edit_item_description"
-                            style="@style/EditorFieldStyle"
-                            android:hint="@string/hint_item_description"
-                            android:inputType="textCapWords" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <!-- Tags category -->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="32dp">
-
-                    <!-- Label -->
-                    <TextView
-                        style="@style/CategoryStyle"
-                        android:text="@string/category_tag" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:orientation="vertical"
-                        android:paddingLeft="4dp">
-
-                        <!-- Tag field -->
-                        <EditText
-                            android:id="@+id/edit_item_tag1"
-                            style="@style/EditorFieldStyle"
-                            android:hint="@string/hint_item_tag1"
-                            android:inputType="textCapWords" />
-
-                        <EditText
-                            android:id="@+id/edit_item_tag2"
-                            style="@style/EditorFieldStyle"
-                            android:hint="@string/hint_item_tag2"
-                            android:inputType="textCapWords" />
-
-                        <EditText
-                            android:id="@+id/edit_item_tag3"
-                            style="@style/EditorFieldStyle"
-                            android:hint="@string/hint_item_tag3"
-                            android:inputType="textCapWords" />
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
