"added more text input layouts in editor activity"

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <!-- Common margin value used throughout the app -->
     <dimen name="activity_margin">16dp</dimen>
 
+    <!-- Image margin value used throughout the app -->
+    <dimen name="image_margin">16dp</dimen>
+
 </resources>
