--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -41,7 +41,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
-                        android:padding="@dimen/activity_margin">
+                        android:paddingTop="32dp"
+                        android:paddingBottom="32dp">
 
                         <!-- Overview category -->
                         <LinearLayout
@@ -133,6 +134,7 @@
                                 style="@style/CategoryStyle"
                                 android:text="@string/category_description" />
 
+                            <!-- Description -->
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -141,11 +143,17 @@
                                 android:paddingLeft="4dp">
 
                                 <!-- Description field -->
-                                <EditText
-                                    android:id="@+id/edit_item_description"
-                                    style="@style/EditorFieldStyle"
-                                    android:hint="@string/hint_item_description"
-                                    android:inputType="textCapWords" />
+                                <android.support.design.widget.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                    <android.support.design.widget.TextInputEditText
+                                        android:id="@+id/edit_item_description"
+                                        style="@style/EditorFieldStyle"
+                                        android:hint="@string/hint_item_description"
+                                        android:inputType="textCapWords" />
+
+                                </android.support.design.widget.TextInputLayout>
 
                             </LinearLayout>
 
@@ -163,6 +171,7 @@
                                 style="@style/CategoryStyle"
                                 android:text="@string/category_tag" />
 
+                            <!-- Tag fields -->
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
@@ -170,25 +179,44 @@
                                 android:orientation="vertical"
                                 android:paddingLeft="4dp">
 
-                                <!-- Tag field -->
-                                <EditText
-                                    android:id="@+id/edit_item_tag1"
-                                    style="@style/EditorFieldStyle"
-                                    android:hint="@string/hint_item_tag1"
-                                    android:inputType="textCapWords" />
+                                <!-- Tag 1 -->
+                                <android.support.design.widget.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
 
-                                <EditText
-                                    android:id="@+id/edit_item_tag2"
-                                    style="@style/EditorFieldStyle"
-                                    android:hint="@string/hint_item_tag2"
-                                    android:inputType="textCapWords" />
+                                    <android.support.design.widget.TextInputEditText
+                                        android:id="@+id/edit_item_tag1"
+                                        style="@style/EditorFieldStyle"
+                                        android:hint="@string/hint_item_tag1"
+                                        android:inputType="textCapWords"/>
 
-                                <EditText
-                                    android:id="@+id/edit_item_tag3"
-                                    style="@style/EditorFieldStyle"
-                                    android:hint="@string/hint_item_tag3"
-                                    android:inputType="textCapWords" />
+                                </android.support.design.widget.TextInputLayout>
 
+                                <!-- Tag 2 -->
+                                <android.support.design.widget.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                    <android.support.design.widget.TextInputEditText
+                                        android:id="@+id/edit_item_tag2"
+                                        style="@style/EditorFieldStyle"
+                                        android:hint="@string/hint_item_tag2"
+                                        android:inputType="textCapWords"/>
+
+                                </android.support.design.widget.TextInputLayout>
+
+                                <!-- Tag 3 -->
+                                <android.support.design.widget.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                    <android.support.design.widget.TextInputEditText
+                                        android:id="@+id/edit_item_tag3"
+                                        style="@style/EditorFieldStyle"
+                                        android:hint="@string/hint_item_tag3"
+                                        android:inputType="textCapWords"  />
+
+                                </android.support.design.widget.TextInputLayout>
 
                             </LinearLayout>
 
