--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -3,15 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CatalogActivity">
+
 
     <!-- This layout contains all the views -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--android:layout_below="@+id/search_bar1"-->
         <!-- Listview shows all available items -->
         <ListView
             android:id="@+id/catalog_list"
@@ -75,22 +78,36 @@
             app:layout_anchorGravity="bottom|right|end"
             app:srcCompat="@android:drawable/ic_input_add" />
 
+        <!--&lt;!&ndash; Search layout &ndash;&gt;-->
+        <!--<android.support.v7.widget.CardView-->
+            <!--android:id="@+id/search_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="15dp"-->
+            <!--android:layout_alignParentTop="true">-->
+
+
+
+        <!--</android.support.v7.widget.CardView>-->
         <!-- Search bar -->
         <com.mancj.materialsearchbar.MaterialSearchBar
             android:id="@+id/search_bar1"
             style="@style/SearchBarTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="16dp"
             app:mt_speechMode="false"
             app:mt_hint="Type to search"
             app:mt_placeholder="Search"
+            android:layout_alignParentTop="true"
+            android:layout_margin="15dp"
+            app:mt_roundedSearchBarEnabled="true"
             />
 
 
 
-
     </RelativeLayout>
+
+
+
 
 </RelativeLayout>
