--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,8 +94,10 @@
     </style>
 
     <style name="SearchBarTheme" parent="MaterialSearchBarLight">
-        <item name="mt_dividerColor">@color/dark_blue</item>
-
+        <item name="mt_dividerColor">@color/dodger_blue</item>
+        <item name="mt_searchIconTint">@color/dodger_blue</item>
+        <item name="mt_placeholderColor">@color/dodger_blue</item>
+        <item name="mt_textCursorTint">@color/dodger_blue</item>
     </style>
 
 
