--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="58"
+                android:layout_weight="55"
                 android:fontFamily="sans-serif-medium"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="#2B3D4D" />
@@ -37,7 +37,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="42"
+                android:layout_weight="45"
                 android:orientation="vertical">
 
                 <!-- quantity text -->
@@ -63,6 +63,7 @@
                         android:text="@string/cardview_quantity_label"
                         android:fontFamily="sans-serif"
                         android:textAppearance="?android:textAppearanceSmall"
+                        android:textSize="11sp"
                         android:textColor="#AEB6BD"
                         />
 
@@ -72,6 +73,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif"
                         android:textAppearance="?android:textAppearanceSmall"
+                        android:textSize="11sp"
                         android:textColor="#AEB6BD"
                         />
 
@@ -100,6 +102,7 @@
                         android:text="@string/cardview_price_label"
                         android:fontFamily="sans-serif"
                         android:textAppearance="?android:textAppearanceSmall"
+                        android:textSize="11sp"
                         android:textColor="#AEB6BD"/>
 
                     <TextView
@@ -108,6 +111,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif"
                         android:textAppearance="?android:textAppearanceSmall"
+                        android:textSize="11sp"
                         android:textColor="#AEB6BD" />
 
                 </LinearLayout>
